# double-pendulum-raylib

./: .gitignore  CMakeLists.txt  compile_flags.txt  main
src/: UIController.cpp  UIController.h  main.cpp  settings.h  simulator.cpp  simulator.h
src/pendulum/: double_pendulum.cpp  double_pendulum.h  pendulum_state.cpp  pendulum_state.h
src/util/: math-util.h  math.h
styles/: circuit.rgs
